lustre/include/linux/lustre_compat25.h
@@ -822,7 +822,13 @@ static inline int ll_quota_off(struct super_block *sb, int off, int remount)
 #define ll_add_to_page_cache_lru(pg, mapping, off, gfp) \
         add_to_page_cache(pg, mapping, off, gfp)
 #define ll_pagevec_init(pv, cold)       pagevec_init(&lru_pvec, cold);
-#define ll_pagevec_add(pv, pg)          pagevec_add(pv, pg)
+#define ll_pagevec_add(pv, pg)					\
+({								\
+	int __ret;						\
+								\
+	page_cache_get(pg);					\
+	__ret = pagevec_add(pv, pg);				\
+})
 #define ll_pagevec_lru_add_file(pv)     pagevec_lru_add_file(pv)
 #endif
 
